Added Games model and endpoint
